plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'health.tracker'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext{
	testContainersJUnitVersion = "1.18.1"
	testContainersMongoDB = "1.18.1"
	mapStructVersion = "1.6.3"
	springCloudVersion = "2023.0.5"
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation "org.mapstruct:mapstruct:${mapStructVersion}"
	implementation 'org.springframework.kafka:spring-kafka:3.3.3'
	implementation 'org.apache.kafka:kafka-streams'
	implementation 'org.springframework.cloud:spring-cloud-stream'
	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka-streams'
	implementation("com.fasterxml.jackson.core:jackson-databind")
	implementation 'org.springframework.boot:spring-boot-starter-webflux'


	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
	testImplementation "org.testcontainers:junit-jupiter:${testContainersJUnitVersion}"
	testImplementation "org.testcontainers:mongodb:${testContainersMongoDB}"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
	java {
		target 'src/**/*.java'
		googleJavaFormat()
	}
}
